--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -1,7 +1,50 @@
 <section id="home_banners" class="as__section as__banner">
   <div class="as__banner_wrapper">
     <div class="as__banner_wrapper_int">
+
       <div class="banner banner_1 active">
+        <div class="as__banner_content full">
+          <h1 class="!leading-none">
+            <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-6xl" style="font-weight: 700;">¡Ahora contacta </span> <br />
+            <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-6xl" style="font-weight: 700;">  a Lusa en </span> <span class="!inline-block w-auto rounded-full !text-azul-norm bg-azul-bright2 py-1 leading-none px-4 text-2xl md:text-6xl" style="font-weight: 700;">WhatsApp!</span><br />
+          
+           
+            <span class="!inline-block w-auto rounded-full bg-yellow-300 py-1 leading-none px-4 text-2xl md:text-2xl">+57 315 511 4150</span>
+          </h1>
+          <div>
+            <p class="ban_anim1 text-2xl md:text-2xl">
+              Un <b>nuevo canal</b> para que <b>solicites tus certificados y documentos</b> relacionados con tu <b>póliza con ASULADO.</b>
+            </p>
+            <p class="dest ban_anim1" style="font-style: italic;">
+              <b>Colilla de pago | Copia de póliza | Certificado de pensión | Certificado de Ingresos y Retenciones
+              </b>
+            </p>
+
+            <!-- <button onclick="startChat()" class="as__button self-start">
+              <span>¡Escríbeme!</span>
+              <i
+                role="presentation"
+                class="fa-light fa-arrow-right"
+                aria-hidden="true"
+              ></i>
+            </button> -->
+          </div>
+
+    
+        </div>
+        <div class="as__banner_images">
+          <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
+          <img
+            src="/assets/images/lusa_whatsapp.webp"
+            class="max-w-[800px]"
+            alt="Asulado"
+          />
+        </div>
+        <div class="as__banner_piso"></div>
+      </div>
+
+
+      <div class="banner banner_1">
         <div class="as__banner_content full">
           <h1 class="!leading-none">
             <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-4xl"
