Refactor CSS styles for search results table and make it responsive

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -157,15 +157,15 @@
           >PREGUNTAS</a
         >
       </li>
-      <!-- <li class="as__nav_links_ppal_li">
+      <li class="as__nav_links_ppal_li">
         <button
           class="as__nav_links_ppal_link dest"
           aria-current="page"
-          title="Blog | DE INTERÉS"
+          title="PORTAL TRANSACCIONAL"
         >
-          DE INTERÉS
+          PORTAL TRANSACCIONAL
         </button>
-      </li> -->
+      </li>
       <li class="usability as__nav_links_ppal_li">
         <a
           class="as__nav_links_ppal_link"
