--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1124,29 +1124,39 @@ body {
             }
             tbody {
               tr {
-                @apply border-b border-slate-300;
-
-                &:nth-child(2n) {
-                  @apply bg-alpha-20;
-                }
-
-                &:has(td:empty) {
-                  @apply hidden;
-                }
+                @apply flex flex-col gap-2;
                 td {
-                  @apply py-2 px-1;
-                  &.dataCol {
-                    &:has(.seacrh_result:empty),
-                    &:has(.search_result:empty) {
-                      @apply hidden;
+                  span {
+                    @apply flex flex-col gap-1 w-full;
+                  }
+                  .palert {
+                    @apply alert w-full alert-warning leading-none mb-4 !flex flex-row gap-2;
+                    .palerts {
+                      @apply flex gap-4 flex-row items-center;
+                      b{
+                        @apply text-xl;
+                      }
                     }
-                    span {
-                      @apply flex flex-col gap-1 w-full;
-                      .palert {
-                        @apply alert w-full alert-warning leading-none mb-4 !flex flex-row gap-2;
-                        .palerts {
-                          @apply flex gap-4 flex-row;
-                        }
+                  }
+                }
+              }
+              table.list {
+                tr {
+                  @apply border-b border-slate-300 table-row;
+
+                  &:nth-child(2n) {
+                    @apply bg-alpha-20;
+                  }
+
+                  &:has(td:empty) {
+                    @apply hidden;
+                  }
+                  td {
+                    @apply py-2 px-1;
+                    &.dataCol {
+                      &:has(.seacrh_result:empty),
+                      &:has(.search_result:empty) {
+                        @apply hidden;
                       }
                     }
                   }
