--- a/src/partials/PORTAL/p_home_articulo.html
+++ b/src/partials/PORTAL/p_home_articulo.html
@@ -2,7 +2,7 @@
   <h3>{{title}}</h3>
   <img src="/assets/images/PORTAL/{{image}}" />
   <p>{{content}}</p>
-  <a href="#" class="as__button small">
+  <a href="/PORTAL/articulo.html" class="as__button small">
     <span>VER MÁS</span>
     <i role="presentation" class="fa-light fa-arrow-right"></i>
   </a>
